--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
       <input type="text" placeholder="search" class="search" />
       <h1>Categories</h1>
       <div class="categories">
-      
+
       </div>
       <h1>Maximum Price</h1>
       <div class="price">
         <input type="range" class="priceRange" />
-        <span class="priceValue">Rs: 1200</span>
+        <span class="priceValue"></span>
       </div>
     </div>
     <div class="mainContent">
       <div class="products">
-       
+
       </div>
     </div>
   </div>
